--- a/Resources/views/Default/index.html.twig
+++ b/Resources/views/Default/index.html.twig
@@ -1,17 +1,10 @@
 {% extends 'SoloistDocumentBundle:Default:base.html.twig' %}
 {% block soloist_document_content %}
-<h1>Liste des documents</h1>
+<h1>Liste des catégories de documents</h1>
 <ul>
     {% for category in categories %}
     <li>
-        {{ category.name }}
-        <ul>
-            {% for document in category.documents %}
-                <li>{{ document.title }} : <a href="{{ path('soloist_document_download', {'id': document.id}) }}">télécharger</a></li>
-            {% else %}
-                <li>Aucun document dans cette catégorie</li>
-            {% endfor %}
-        </ul>
+        <a href="{{ path('soloist_document_show_category', {'slug': category.slug}) }}">{{ category.name }}</a>
     </li>
     {% endfor %}
 </ul>
