--- a/Resources/views/Default/showDocument.html.twig
+++ b/Resources/views/Default/showDocument.html.twig
@@ -3,14 +3,26 @@
 {% block soloist_document_content %}
     <h1>{{ document.title }}</h1>
 
-    <ul>
+    <table>
+        <thead>
+            <tr>
+                <th>Nom du fichier</th>
+                <th>Type de fichier</th>
+                <th>Lien de téléchargement</th>
+            </tr>
+        </thead>
+        <tbody>
         {% for file in document.files %}
-            <li>
-                {{ file.name }} :
-                <a href="{{ path('soloist_document_download', { 'id': file.id }) }}">Télécharger</a>
-            </li>
+            <tr>
+                <td>{{ file.name }}</td>
+                <td>{{ file.metaData }}</td>
+                <td><a href="{{ path('soloist_document_download', { 'id': file.id }) }}">Télécharger</a></td>
+            </tr>
         {% else %}
-            <li>Pas de fichier pour ce document</li>
+            <tr>
+                <td colspan="3">Pas de fichier pour ce document</td>
+            </tr>
         {% endfor %}
-    </ul>
+        </tbody>
+    </table>
 {% endblock %}
